add Contacts book

--- a/src/components/From/Form.module.css
+++ b/src/components/From/Form.module.css
@@ -1,9 +1,9 @@
-.container {
-    padding: 10px;
-    width: 400px;
-    border: 1px solid black;
-}
-
 .form {
-    margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgb(148, 142, 142);
+    padding: 30px;
+    margin-bottom: 30px;
 }
